# libzetta-rs

./: .cirrus.yml  .gitignore  .spelling  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  Vagrantfile  azure-pipelines.yml  cliff.toml  codecov.yml  contributing.md  flake.nix  foo.txt  justfile  run_tests.sh  rust-toolchain.toml  rustfmt.toml  wat
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
benches/: llsd.rs
libnv-sys/: Cargo.toml  build.rs
libnv-sys/src/: lib.rs
libzfs_core-sys/: Cargo.toml  bindings.rs  build.rs  zfscore.h
libzfs_core-sys/src/: lib.rs
src/: fuzzy.rs  lib.rs  log.rs  nv.rs  utils.rs
src/parsers/: mod.rs  stdout.pest  zfs.pest  zfs.rs
src/parsers/fixtures/: SIGABRT.PID.84191.TIME.2019-08-21.20.04.09.fuzz
src/zfs/: delegating.rs  description.rs  errors.rs  lzc.rs  mod.rs  open3.rs  pathext.rs  properties.rs
src/zfs/fixtures/: bookmark_properties_freebsd.sorted  filesystem_properties_freebsd  filesystem_properties_freebsd.sorted  snapshot_properties_freebsd.sorted  volume_properties_freebsd.sorted
src/zpool/: description.rs  mod.rs  open3.rs  properties.rs  topology.rs  vdev.rs
src/zpool/fixtures/: import_with_empty_comment  status_with_block_device_nested
tests/: test_misc.rs  test_misc2.rs  test_zfs.rs  test_zpool.rs
