[package]
authors = ["Andrey Cherkashin <andoriyu@gmail.com>"]
version = "0.1.2"
description = "libzetta is a stable interface for programmatic administration of ZFS"
repository = "https://github.com/Inner-Heaven/libzetta-rs"
keywords = ["zfs", "freebsd", "zol", "os", "open3"]
categories = ["os", "filesystem", "external-ffi-bindings"]
license = "BSD-2-Clause"
name = "libzetta"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "Inner-Heaven/libzetta-rs" }
is-it-maintained-issue-resolution = { repository = "Inner-Heaven/libzetta-rs" }
azure-devops = { project = "andoriyu/libpandemonium", pipeline = "libzetta-rs", build="4" }

[dependencies]
getset = "0.0.7"
derive_builder = "0.7"
lazy_static = "1.2"
libc = "0.2"
pest = "2.1"
pest_derive = "2.1"
quick-error = "1.2"
regex = "1.1"
slog = "2"
slog-stdlog = "4"

[dev-dependencies]
cavity = "1.1"
rand = "0.7"
slog-term = "2"
tempdir = "0.3"

[target]
[target."cfg(freebsd)"]
[target."cfg(freebsd)".dependencies]
libnv-sys = "0.1"
libzfs_core-sys = "0.1"
