[package]
authors = ["Andrey Snow <andoriyu@gmail.com>"]
version = "0.5.0"
description = "libzetta is a stable interface for programmatic administration of ZFS"
repository = "https://github.com/Inner-Heaven/libzetta-rs"
keywords = ["zfs", "freebsd", "zol", "os", "open3"]
categories = ["os", "filesystem", "external-ffi-bindings"]
license = "BSD-2-Clause"
name = "libzetta"
edition = "2018"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "Inner-Heaven/libzetta-rs" }
is-it-maintained-issue-resolution = { repository = "Inner-Heaven/libzetta-rs" }
azure-devops = { project = "andoriyu/libpandemonium", pipeline = "libzetta-rs", build="4" }

[dependencies]
getset = "0.1.0"
derive_builder = "0.12"
lazy_static = "1.2"
libc = "0.2"
pest = "2.6"
pest_derive = "2.6"
quick-error = "1.2"
slog = "2"
slog-stdlog = "4"
zfs-core-sys = { version = "0.5.2", package = "libzetta-zfs-core-sys"}
cstr-argument = "0.1.1"
strum = "0.25.0"
strum_macros = "0.25.0"
chrono = "0.4.26"
bitflags = "1.2.1"
once_cell = "1.18.0"

[dependencies.libnv]
version = "0.4.2"
default-features = false
features = ["nvpair"]

[dependencies.regex]
version = "1.8.4"
default-features = false
features = ["std", "perf", "unicode-perl"]

[dev-dependencies]
cavity = "1.1"
rand = "0.8"
slog-term = "2"
tempdir = "0.3"
tempfile = "3"

[build-dependencies]
cmake = "0.1"

[package.metadata.release]
dev-version-ext = "pre"
