[package]
name = "libnv-sys"
version = "0.1.1"
authors = ["Andrey Cherkashin <with.out@me.com>"]
links = "libnv"
build = "build.rs"
categories = ["external-ffi-bindings"]
license = "BSD-2-Clause"
description = "FFI bindings to libnv."
[lib]
name = "libnv_sys"

[dependencies]
libc = "0.2"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
