[package]
name = "libzfs_core-sys"
version = "0.1.0"
authors = ["Andrey Cherkashin <with.out@me.com>"]
links = "zfs_core"
build = "build.rs"
categories = ["external-ffi-bindings"]
license = "BSD-2-Clause"
description = "FFI bindings to libzfs_core"
[lib]
name = "zfs_core_sys"

[dependencies]
libc = "0.2"
libnv-sys = "0.1.2"

